# scarscape

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
raw_data/: dataprocessing.md  igtcr_gene.1kb.38.bed  igtcr_gene.38.2.bed  igtcr_gene.38.bed6.bed  igtcr_gene.38.merged.bed4.bed  igtcr_gene.sorted.38.bed  igtcr_gene_names.txt  mark_ambiguous.R  process_igtcr_tsv.R
src/: lib.rs  main.rs  utils.rs  vcf.rs
src/data/: igtcr_gene.38.bed4.bed
testfiles/: manifest.csv  manifest_dups.csv  manifest_empty_sample.csv  manifest_no_values.tsv  manifest_wrongnames.csv  tumor_sample.purple.sv.withIGHD.vcf
wix/: main.wxs
