[package]
name = "scarscape"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bedrs = "0.2.25"
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.3.1"
fern = { version = "0.7.1", features = ["colored"] }
granges = "0.2.2"
humantime = "2.2.0"
log = "0.4.26"
noodles = { version = "0.94.0", features = ["bed", "core", "vcf"] }
noodles-bed = "0.22.0"
noodles-vcf = "0.75.0"
path-absolutize = "3.1.1"
regex = "1.11.1"
rust-htslib = "0.49.0"
serde = { version = "1.0.219", features = ["derive"] }
